# opentelemetry-python-contrib

instrumentation/opentelemetry-instrumentation-botocore/: pyproject.toml
instrumentation/opentelemetry-instrumentation-botocore/src/opentelemetry/instrumentation/botocore/: version.py
instrumentation/opentelemetry-instrumentation-botocore/src/opentelemetry/instrumentation/botocore/extensions/: dynamodb.py
instrumentation/opentelemetry-instrumentation-open/: pyproject.toml
instrumentation/opentelemetry-instrumentation-open/src/opentelemetry/instrumentation/open/: __init__.py  package.py
