[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opentelemetry-instrumentation-open"
dynamic = ["version"]
description = "OpenTelemetry Open instrumentation"
license = "Apache-2.0"
authors = [
  { name = "Contrast", email = "aaa@aaa.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "opentelemetry-api ~= 1.12",
  "opentelemetry-instrumentation == 0.36b0",
]

[project.optional-dependencies]
instruments = []
test = [
  "opentelemetry-test-utils == 0.36b0",
]

[project.entry-points.opentelemetry_instrumentor]
os = "opentelemetry.instrumentation.os:OpenInstrumentor"

[tool.hatch.version]
path = "src/opentelemetry/instrumentation/open/version.py"

[tool.hatch.build.targets.sdist]
include = [
  "/src"
]

[tool.hatch.build.targets.wheel]
packages = ["src/opentelemetry"]
